# transact-scrape

./: .gitignore  README.md  combinedTextItems.json  index.js  merge.js  package.json  parse.py  pyproject.toml
textItems/: textItems-1.json  textItems-2.json  textItems-3.json  textItems-4.json  textItems-5.json  textItems-6.json
